--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,21 +1,27 @@
 {
-  "name": "event-logging-frontend",
+  "name": "frontend",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.2.0",
+    "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.1",
     "@types/node": "^16.11.36",
     "@types/react": "^18.0.9",
     "@types/react-dom": "^18.0.5",
+    "assert": "^2.0.0",
+    "crypto": "^1.0.1",
     "kafkajs": "^2.0.1",
+    "net": "^1.0.2",
     "react": "^18.1.0",
     "react-dom": "^18.1.0",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "4.0.3",
+    "tls": "^0.0.1",
     "typescript": "^4.7.2",
-    "web-vitals": "^2.1.4"
+    "util": "^0.12.4",
+    "web-vitals": "^2.1.4",
+    "zlib": "^1.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
